--- a/aboutme.html
+++ b/aboutme.html
@@ -1,43 +1,72 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
-	<title>The BS Box About Me</title>
+	<title>BS Box About Me</title>
 	<meta charset="utf-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
+	<link rel="icon" type="image/png" href="images/BSBoxFavicon.png">
 	<link rel="preconnect" href="https://fonts.googleapis.com">
 	<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-	<link href="https://fonts.googleapis.com/css2?family=Source+Code+Pro:ital,wght@0,200..900;1,200..900&display=swap" rel="stylesheet">
+	<link href="https://fonts.googleapis.com/css2?family=Source+Code+Pro:ital,wght@0,200..900;1,200..900&display=swap"
+		rel="stylesheet">
 	<link rel="stylesheet" href="bsbox.css">
-	<link rel="stylesheet" href="bsboxgridillust.css">
+	<link rel="stylesheet" href="bsboxaboutme.css">
 	<link href='https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css' rel='stylesheet'>
 </head>
+
 <body>
 	<header class="header">
-		<a href="index.html" class="logo">The BS Box</a>
+		<a href="index.html" class="logo">[BS BOX]</a>
 
 		<input type="checkbox" id="check">
 		<label for="check" class="icons">
 			<ion-icon name="menu-outline" id="menu-icon"></ion-icon>
 			<ion-icon name="close-outline" id="close-icon"></ion-icon>
 		</label>
-		
+
 		<nav class="navbar">
 			<a href="index.html">Home</a>
 			<a href="works.html">Works</a>
 			<a href="aboutme.html">About Me</a>
-			<a href="resume.html">Resume</a>
+			<a href="contact.html">Contact</a>
 		</nav>
 	</header>
 	<main>
-		<br><br><br><br><br><br>
-		<h1><bold>WIP</bold></h1>
+		<div class="containter">
+			<div class="profile_container">
+				<div class="profile_img">
+					<img src="images/Red Pfp.png" alt="Profile Picture">
+				</div>
+				<div>
+					<h1 class="profile_name">
+						[B]railey [S]harpe
+					</h1>
+					<hr>
+					<p class="profile_title">Innovative Thinker</p>
+					<p class="description">Lorem ipsum dolor sit amet consectetur adipisicing elit. Officia aperiam
+						molestiae velit quasi rem sed voluptates voluptatem similique tenetur! Ut, itaque. Magni
+						nobis nesciunt vel laborum, modi doloribus eius quasi!
+					</p>
+				</div>
+
+				<div class="download_button">
+					<a href="sharperesume.pdf" download="Resume.pdf"><ion-icon name="download"></ion-icon> download resume.</a>
+				</div>
+
+			</div>
+		</div>
+
+		</div>
 	</main>
 
 	<footer class="footer" alt="footer">
-		© 2023 Brailey Sharpe All rights reserved. All Images are the property of Brailey Sharpe unless stated otherwise and may not be used without written consent.
+		© 2023 Brailey Sharpe All rights reserved. All Images are the property of Brailey Sharpe unless stated otherwise
+		and may not be used without written consent.
 	</footer>
 
 	<script type="module" src="https://unpkg.com/ionicons@7.1.0/dist/ionicons/ionicons.esm.js"></script>
 	<script nomodule src="https://unpkg.com/ionicons@7.1.0/dist/ionicons/ionicons.js"></script>
 </body>
+
 </html>
