--- a/contact.html
+++ b/contact.html
@@ -2,7 +2,7 @@
 <html lang="en">
 
 <head>
-	<title>BS Box Works</title>
+	<title>BS Box Contact</title>
 	<meta charset="utf-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<link rel="icon" type="image/png" href="images/BSBoxFavicon.png">
@@ -11,7 +11,7 @@
 	<link href="https://fonts.googleapis.com/css2?family=Source+Code+Pro:ital,wght@0,200..900;1,200..900&display=swap"
 		rel="stylesheet">
 	<link rel="stylesheet" href="bsbox.css">
-	<link rel="stylesheet" href="bsboxworks.css">
+	<link rel="stylesheet" href="bsboxcontact.css">
 	<link href='https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css' rel='stylesheet'>
 </head>
 
@@ -33,43 +33,29 @@
 		</nav>
 	</header>
 
-	<div class="card_container">
-		<div class="card">
-			<img src="images/illustrations/20.png">
-			<div class="card_content">
-				<h1>Illustrations</h1>
-				<hr>
-				<p>
-					a collection of rendered art pieces.
-				</p>
-				<a href="illust.html" class="card_button">view.</a>
+	<div class="hero">
+		<form>
+			<div class="input_group">
+				<input type="text" id="name" required>
+				<label for="name"><ion-icon name="person"></ion-icon> your name.</label>
 			</div>
-		</div>
-		<div class="card">
-			<img src="images/character concepts/20.png">
-			<div class="card_content">
-				<h1>Character Concepts</h1>
-				<hr>
-				<p>
-					a collection of concepts for character development.
-				</p>
-				<a href="charcon.html" class="card_button">view.</a>
+			<div class="input_group">
+				<input type="text" id="number" required>
+				<label for="number"><ion-icon name="call"></ion-icon> phone no.</label>
 			</div>
-		</div>
-		<div class="card">
-			<img src="images/code.jpg">
-			<div class="card_content">
-				<h1>Programming Projects</h1>
-				<hr>
-				<p>
-					a collection of programming projects.
-				</p>
-				<a href="progproj.html" class="card_button">view.</a>
+			<div class="input_group">
+				<input type="text" id="email" required>
+				<label for="email"><ion-icon name="mail"></ion-icon> email.</label>
 			</div>
-		</div>
+			<div class="input_group">
+				<textarea id="message" rows="8" required></textarea>
+				<label for="message"><ion-icon name="chatbubbles"></ion-icon> message.</label>
+			</div>
+			<button type="submit">submit.</button>
+		</form>
 	</div>
 
-	<footer class="footer" alt="footer">
+	<footer class="footer">
 		© 2023 Brailey Sharpe All rights reserved. All Images are the property of Brailey Sharpe unless stated otherwise
 		and may not be used without written consent.
 	</footer>
