--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
 	<title>BS Box</title>
 	<meta charset="utf-8">
@@ -7,10 +8,12 @@
 	<link rel="icon" type="image/png" href="images/BSBoxFavicon.png">
 	<link rel="preconnect" href="https://fonts.googleapis.com">
 	<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-	<link href="https://fonts.googleapis.com/css2?family=Source+Code+Pro:ital,wght@0,200..900;1,200..900&display=swap" rel="stylesheet">
+	<link href="https://fonts.googleapis.com/css2?family=Source+Code+Pro:ital,wght@0,200..900;1,200..900&display=swap"
+		rel="stylesheet">
 	<link rel="stylesheet" href="bsbox.css">
 	<link href='https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css' rel='stylesheet'>
 </head>
+
 <body>
 	<header class="header">
 		<a href="index.html" class="logo">[BS BOX]</a>
@@ -20,19 +23,21 @@
 			<ion-icon name="menu-outline" id="menu-icon"></ion-icon>
 			<ion-icon name="close-outline" id="close-icon"></ion-icon>
 		</label>
-		
+
 		<nav class="navbar">
 			<a href="index.html">Home</a>
 			<a href="works.html">Works</a>
 			<a href="aboutme.html">About Me</a>
-			<a href="resume.html">Resume</a>
+			<a href="contact.html">Contact</a>
 		</nav>
 	</header>
 	<main class="index-main">
 		<div class="center">
 			<div class="center-text">
-				<h1 class="section_title">[B]railey [S]harpe Box</h1><hr>
-				<p>Step into the BS Box, your gateway to exploring a curated collection of my latest artworks and programming endeavors.</p>
+				<h1 class="section_title">[B]railey [S]harpe Box</h1>
+				<hr>
+				<p>Step into the BS Box, your gateway to exploring a curated collection of my latest artworks and
+					programming endeavors.</p>
 			</div>
 			<ul class="socials">
 				<li>
@@ -48,10 +53,12 @@
 		</div>
 	</main>
 	<footer class="footer">
-		© 2023 All rights reserved. All Images are the property of Brailey Sharpe unless stated otherwise and may not be used without written consent.
+		© 2023 All rights reserved. All Images are the property of Brailey Sharpe unless stated otherwise and may not be
+		used without written consent.
 	</footer>
 
 	<script type="module" src="https://unpkg.com/ionicons@7.1.0/dist/ionicons/ionicons.esm.js"></script>
 	<script nomodule src="https://unpkg.com/ionicons@7.1.0/dist/ionicons/ionicons.js"></script>
 </body>
+
 </html>
