--- a/progproj.html
+++ b/progproj.html
@@ -1,40 +1,51 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
-	<title>The BS Box Programming Projects</title>
+	<title>BS Box Programming Projects</title>
 	<meta charset="utf-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
+	<link rel="icon" type="image/png" href="images/BSBoxFavicon.png">
+	<link rel="preconnect" href="https://fonts.googleapis.com">
+	<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+	<link href="https://fonts.googleapis.com/css2?family=Source+Code+Pro:ital,wght@0,200..900;1,200..900&display=swap"
+		rel="stylesheet">
 	<link rel="stylesheet" href="bsbox.css">
-	<link rel="stylesheet" href="bsboxgridillust.css">
+	<link rel="stylesheet" href="bsboxaboutme.css">
 	<link href='https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css' rel='stylesheet'>
 </head>
+
 <body>
 	<header class="header">
-		<a href="index.html" class="logo">The BS Box</a>
+		<a href="index.html" class="logo">[BS BOX]</a>
 
 		<input type="checkbox" id="check">
 		<label for="check" class="icons">
 			<ion-icon name="menu-outline" id="menu-icon"></ion-icon>
 			<ion-icon name="close-outline" id="close-icon"></ion-icon>
 		</label>
-		
+
 		<nav class="navbar">
 			<a href="index.html">Home</a>
 			<a href="works.html">Works</a>
 			<a href="aboutme.html">About Me</a>
-			<a href="resume.html">Resume</a>
+			<a href="contact.html">Contact</a>
 		</nav>
 	</header>
 	<main>
 		<br><br><br><br><br><br>
-		<h1><bold>WIP</bold></h1>
+		<h1>
+			<bold>WIP</bold>
+		</h1>
 	</main>
 
 	<footer class="footer" alt="footer">
-		© 2023 Brailey Sharpe All rights reserved. All Images are the property of Brailey Sharpe unless stated otherwise and may not be used without written consent.
+		© 2023 Brailey Sharpe All rights reserved. All Images are the property of Brailey Sharpe unless stated otherwise
+		and may not be used without written consent.
 	</footer>
 
 	<script type="module" src="https://unpkg.com/ionicons@7.1.0/dist/ionicons/ionicons.esm.js"></script>
 	<script nomodule src="https://unpkg.com/ionicons@7.1.0/dist/ionicons/ionicons.js"></script>
 </body>
+
 </html>
