--- a/aboutme.html
+++ b/aboutme.html
@@ -43,15 +43,21 @@
 						[B]railey [S]harpe
 					</h1>
 					<hr>
-					<p class="profile_title">Innovative Thinker</p>
-					<p class="description">Lorem ipsum dolor sit amet consectetur adipisicing elit. Officia aperiam
-						molestiae velit quasi rem sed voluptates voluptatem similique tenetur! Ut, itaque. Magni
-						nobis nesciunt vel laborum, modi doloribus eius quasi!
+					<p class="profile_title">bridge the gap.</p>
+					<p class="description">My name is Brailey! I am a creative thinker, who loves melding logic and
+						creativity into one! Despite my love of graphic design and digital portraits, I am exploring a
+						unique art medium with programming, as I am currently aiming to receive my Bachelors in Computer
+						Science by 2026. 
+						<br><br>
+						I love the challenge Computer Science brings, as it's like a puzzle to solve
+						and a construct to build. Whenever I am not out and about, you will always find me sitting
+						behind my computer screen.
 					</p>
 				</div>
 
 				<div class="download_button">
-					<a href="sharperesume.pdf" download="Resume.pdf"><ion-icon name="download"></ion-icon> download resume.</a>
+					<a href="sharperesume.pdf" download="Resume.pdf"><ion-icon name="download"></ion-icon> download
+						resume.</a>
 				</div>
 
 			</div>
