--- a/contact.html
+++ b/contact.html
@@ -33,27 +33,38 @@
 		</nav>
 	</header>
 
-	<div class="hero">
-		<form>
-			<div class="input_group">
-				<input type="text" id="name" required>
-				<label for="name"><ion-icon name="person"></ion-icon> your name.</label>
-			</div>
-			<div class="input_group">
-				<input type="text" id="number" required>
-				<label for="number"><ion-icon name="call"></ion-icon> phone no.</label>
-			</div>
-			<div class="input_group">
-				<input type="text" id="email" required>
-				<label for="email"><ion-icon name="mail"></ion-icon> email.</label>
-			</div>
-			<div class="input_group">
-				<textarea id="message" rows="8" required></textarea>
-				<label for="message"><ion-icon name="chatbubbles"></ion-icon> message.</label>
-			</div>
-			<button type="submit">submit.</button>
-		</form>
-	</div>
+	<main>
+		<div class="form_heading">
+			<h1>
+				Contact Me
+			</h1>
+			<hr>
+			<p>input your information below if you're interested in contacting me.</p>
+		</div>
+
+		<div class="hero">
+			<form>
+				<div class="input_group">
+					<input type="text" id="name" required>
+					<label for="name" class="form_label"><ion-icon name="person"></ion-icon> your name.</label>
+				</div>
+				<div class="input_group">
+					<input type="text" id="number" required>
+					<label for="number" class="form_label"><ion-icon name="call"></ion-icon> phone no.</label>
+				</div>
+				<div class="input_group">
+					<input type="text" id="email" required>
+					<label for="email" class="form_label"><ion-icon name="mail"></ion-icon> email.</label>
+				</div>
+				<div class="input_group">
+					<textarea id="message" rows="8" required></textarea>
+					<label for="message" class="form_label"><ion-icon name="chatbubbles"></ion-icon> message.</label>
+				</div>
+				<button type="submit" class="submit_button">submit.</button>
+			</form>
+		</div>
+	</main>
+
 
 	<footer class="footer">
 		© 2023 Brailey Sharpe All rights reserved. All Images are the property of Brailey Sharpe unless stated otherwise
