--- a/aboutme.html
+++ b/aboutme.html
@@ -62,11 +62,9 @@
 
 			</div>
 		</div>
-
-		</div>
 	</main>
 
-	<footer class="footer" alt="footer">
+	<footer class="footer">
 		© 2023 Brailey Sharpe All rights reserved. All Images are the property of Brailey Sharpe unless stated otherwise
 		and may not be used without written consent.
 	</footer>
