--- a/progproj.html
+++ b/progproj.html
@@ -39,7 +39,7 @@
 		</h1>
 	</main>
 
-	<footer class="footer" alt="footer">
+	<footer class="footer">
 		© 2023 Brailey Sharpe All rights reserved. All Images are the property of Brailey Sharpe unless stated otherwise
 		and may not be used without written consent.
 	</footer>
