--- a/works.html
+++ b/works.html
@@ -35,7 +35,7 @@
 
 	<div class="card_container">
 		<div class="card">
-			<img src="images/illustrations/20.png">
+			<img src="images/illustrations/20.png" alt="Illustrations Link Card">
 			<div class="card_content">
 				<h1>Illustrations</h1>
 				<hr>
@@ -46,7 +46,7 @@
 			</div>
 		</div>
 		<div class="card">
-			<img src="images/character concepts/20.png">
+			<img src="images/character concepts/20.png" alt="Character Concepts Link Card">
 			<div class="card_content">
 				<h1>Character Concepts</h1>
 				<hr>
@@ -57,7 +57,7 @@
 			</div>
 		</div>
 		<div class="card">
-			<img src="images/code.jpg">
+			<img src="images/code.jpg" alt="Programming Projects Link Card">
 			<div class="card_content">
 				<h1>Programming Projects</h1>
 				<hr>
@@ -69,7 +69,7 @@
 		</div>
 	</div>
 
-	<footer class="footer" alt="footer">
+	<footer class="footer">
 		© 2023 Brailey Sharpe All rights reserved. All Images are the property of Brailey Sharpe unless stated otherwise
 		and may not be used without written consent.
 	</footer>
