Updated website with current information.
- Improved CSS styling for aspects of the projects table.
- Removed unnecessary code from existing css/html
- Removed Contact page.

--- a/aboutme.html
+++ b/aboutme.html
@@ -12,7 +12,7 @@
 		rel="stylesheet">
 	<link rel="stylesheet" href="bsbox.css">
 	<link rel="stylesheet" href="bsboxaboutme.css">
-	<link href='https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css' rel='stylesheet'>
+	<link href="https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css" rel="stylesheet">
 </head>
 
 <body>
@@ -29,11 +29,10 @@
 			<a href="index.html">Home</a>
 			<a href="works.html">Works</a>
 			<a href="aboutme.html">About Me</a>
-			<a href="contact.html">Contact</a>
 		</nav>
 	</header>
 	<main>
-		<div class="containter">
+		<div class="container">
 			<div class="profile_container">
 				<div class="profile_img">
 					<img src="images/Red Pfp.png" alt="Profile Picture">
