--- a/illust.html
+++ b/illust.html
@@ -11,8 +11,8 @@
 	<link href="https://fonts.googleapis.com/css2?family=Source+Code+Pro:ital,wght@0,200..900;1,200..900&display=swap"
 		rel="stylesheet">
 	<link rel="stylesheet" href="bsbox.css">
-	<link rel="stylesheet" href="bsboxgridillust.css">
-	<link href='https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css' rel='stylesheet'>
+	<link rel="stylesheet" href="bsboximagegrid.css">
+	<link href="https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css" rel="stylesheet">
 </head>
 
 <body>
@@ -29,7 +29,6 @@
 			<a href="index.html">Home</a>
 			<a href="works.html">Works</a>
 			<a href="aboutme.html">About Me</a>
-			<a href="contact.html">Contact</a>
 		</nav>
 	</header>
 
@@ -44,64 +43,67 @@
 	<main class="main-gallery">
 		<div class="container">
 			<div class="image-gallery">
-				<a href="images/illustrations/1.png" class="ill-1">
+				<a href="images/illustrations/1.png" style="background-image: url('images/illustrations/1.png');">
 					<ion-icon name="expand-outline"></ion-icon>
 				</a>
-				<a href="images/illustrations/2.png" class="ill-2">
+				<a href="images/illustrations/2.png" style="background-image: url('images/illustrations/2.png');">
 					<ion-icon name="expand-outline"></ion-icon>
 				</a>
-				<a href="images/illustrations/3.png" class="ill-3">
+				<a href="images/illustrations/3.png" style="background-image: url('images/illustrations/3.png');">
 					<ion-icon name="expand-outline"></ion-icon>
 				</a>
-				<a href="images/illustrations/4.jpg" class="ill-4">
+				<a href="images/illustrations/4.jpg" style="background-image: url('images/illustrations/4.jpg');">
 					<ion-icon name="expand-outline"></ion-icon>
 				</a>
-				<a href="images/illustrations/5.png" class="ill-5">
+				<a href="images/illustrations/5.png" style="background-image: url('images/illustrations/5.png');">
 					<ion-icon name="expand-outline"></ion-icon>
 				</a>
-				<a href="images/illustrations/6.png" class="ill-6">
+				<a href="images/illustrations/6.png" style="background-image: url('images/illustrations/6.png');">
 					<ion-icon name="expand-outline"></ion-icon>
 				</a>
-				<a href="images/illustrations/7.png" class="ill-7">
+				<a href="images/illustrations/7.png" style="background-image: url('images/illustrations/7.png');">
 					<ion-icon name="expand-outline"></ion-icon>
 				</a>
-				<a href="images/illustrations/8.png" class="ill-8">
+				<a href="images/illustrations/8.png" style="background-image: url('images/illustrations/8.png');">
 					<ion-icon name="expand-outline"></ion-icon>
 				</a>
-				<a href="images/illustrations/9.png" class="ill-9">
+				<a href="images/illustrations/9.png" style="background-image: url('images/illustrations/9.png');">
 					<ion-icon name="expand-outline"></ion-icon>
 				</a>
-				<a href="images/illustrations/10.jpg" class="ill-10">
+				<a href="images/illustrations/10.jpg" style="background-image: url('images/illustrations/10.jpg');">
 					<ion-icon name="expand-outline"></ion-icon>
 				</a>
-				<a href="images/illustrations/11.png" class="ill-11">
+				<a href="images/illustrations/11.png" style="background-image: url('images/illustrations/11.png');">
 					<ion-icon name="expand-outline"></ion-icon>
 				</a>
-				<a href="images/illustrations/12.png" class="ill-12">
+				<a href="images/illustrations/12.png" style="background-image: url('images/illustrations/12.png');">
 					<ion-icon name="expand-outline"></ion-icon>
 				</a>
-				<a href="images/illustrations/13.png" class="ill-13">
+				<a href="images/illustrations/13.png" style="background-image: url('images/illustrations/13.png');">
 					<ion-icon name="expand-outline"></ion-icon>
 				</a>
-				<a href="images/illustrations/14.png" class="ill-14">
+				<a href="images/illustrations/14.png" style="background-image: url('images/illustrations/14.png');">
 					<ion-icon name="expand-outline"></ion-icon>
 				</a>
-				<a href="images/illustrations/15.jpg" class="ill-15">
+				<a href="images/illustrations/15.jpg" style="background-image: url('images/illustrations/15.jpg');">
 					<ion-icon name="expand-outline"></ion-icon>
 				</a>
-				<a href="images/illustrations/16.png" class="ill-16">
+				<a href="images/illustrations/16.png" style="background-image: url('images/illustrations/16.png');">
 					<ion-icon name="expand-outline"></ion-icon>
 				</a>
-				<a href="images/illustrations/17.png" class="ill-17">
+				<a href="images/illustrations/17.png" style="background-image: url('images/illustrations/17.png');">
 					<ion-icon name="expand-outline"></ion-icon>
 				</a>
-				<a href="images/illustrations/18.png" class="ill-18">
+				<a href="images/illustrations/18.png" style="background-image: url('images/illustrations/18.png');">
 					<ion-icon name="expand-outline"></ion-icon>
 				</a>
-				<a href="images/illustrations/19.png" class="ill-19">
+				<a href="images/illustrations/19.png" style="background-image: url('images/illustrations/19.png');">
 					<ion-icon name="expand-outline"></ion-icon>
 				</a>
-				<a href="images/illustrations/20.png" class="ill-20">
+				<a href="images/illustrations/20.png" style="background-image: url('images/illustrations/20.png');">
+					<ion-icon name="expand-outline"></ion-icon>
+				</a>
+				<a href="images/illustrations/21.png" style="background-image: url('images/illustrations/21.png');">
 					<ion-icon name="expand-outline"></ion-icon>
 				</a>
 			</div>
