--- a/progproj.html
+++ b/progproj.html
@@ -11,8 +11,8 @@
 	<link href="https://fonts.googleapis.com/css2?family=Source+Code+Pro:ital,wght@0,200..900;1,200..900&display=swap"
 		rel="stylesheet">
 	<link rel="stylesheet" href="bsbox.css">
-	<link rel="stylesheet" href="bsboxaboutme.css">
-	<link href='https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css' rel='stylesheet'>
+	<link rel="stylesheet" href="bsboxprogproj.css">
+	<link href="https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css" rel="stylesheet">
 </head>
 
 <body>
@@ -29,14 +29,44 @@
 			<a href="index.html">Home</a>
 			<a href="works.html">Works</a>
 			<a href="aboutme.html">About Me</a>
-			<a href="contact.html">Contact</a>
 		</nav>
 	</header>
 	<main>
-		<br><br><br><br><br><br>
-		<h1>
-			<bold>WIP</bold>
-		</h1>
+		<div class="table_heading">
+			<h1>
+				Programming Projects
+			</h1>
+			<hr>
+			<p>a collection of programming projects.</p>
+		</div>
+		<div class="table">
+			<table>
+				<tr>
+					<th>Title</th>
+					<th>Description</th>
+					<th>Languages</th>
+					<th>GitHub</th>
+				</tr>
+				<tr>
+					<td>Galaga</td>
+					<td>Created a small-scale clone of the 1981 arcade game Galaga, with custom animated sprites, round progression, and a sortable high score board. All scores can be sustained over multiple iterations of the game.</td>
+					<td>C#</td>
+					<td> <a href="https://github.com/BraileySharpe/Galaga" target="_blank"><ion-icon name="open-outline"></ion-icon></a></td>
+				</tr>
+				<tr>
+					<td>Text-Based Adventure Game</td>
+					<td>Created a text based adventure game, where the player must find a way to escape from a haunted mansion by collecting items, avoiding hazards, and interacting with the environment.</td>
+					<td>Java</td>
+					<td> <a href="https://github.com/BraileySharpe/HauntedTextAdventure" target="_blank"><ion-icon name="open-outline"></ion-icon></a></td>
+				</tr>
+				<tr>
+					<td>Art Portfolio Website</td>
+					<td>Developed a portfolio website to track personal digital art projects and programming projects.</td>
+					<td>HTML/CSS, & JavaScript</td>
+					<td> <a href="https://github.com/BraileySharpe/ArtPortfolio" target="_blank"><ion-icon name="open-outline"></ion-icon></a></td>
+				</tr>
+			</table>
+		</div>
 	</main>
 
 	<footer class="footer">
