--- a/charcon.html
+++ b/charcon.html
@@ -11,8 +11,8 @@
 	<link href="https://fonts.googleapis.com/css2?family=Source+Code+Pro:ital,wght@0,200..900;1,200..900&display=swap"
 		rel="stylesheet">
 	<link rel="stylesheet" href="bsbox.css">
-	<link rel="stylesheet" href="bsboxgridcharcon.css">
-	<link href='https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css' rel='stylesheet'>
+	<link rel="stylesheet" href="bsboximagegrid.css">
+	<link href="https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css" rel="stylesheet">
 </head>
 
 <body>
@@ -29,7 +29,6 @@
 			<a href="index.html">Home</a>
 			<a href="works.html">Works</a>
 			<a href="aboutme.html">About Me</a>
-			<a href="contact.html">Contact</a>
 		</nav>
 	</header>
 
@@ -44,64 +43,67 @@
 	<main class="main-gallery">
 		<div class="container">
 			<div class="image-gallery">
-				<a href="images/character concepts/1.png" class="con-1">
+				<a href="images/character concepts/1.png" style="background-image: url('images/character concepts/1.png');">
 					<ion-icon name="expand-outline"></ion-icon>
 				</a>
-				<a href="images/character concepts/2.png" class="con-2">
+				<a href="images/character concepts/2.png" style="background-image: url('images/character concepts/2.png');">
 					<ion-icon name="expand-outline"></ion-icon>
 				</a>
-				<a href="images/character concepts/3.png" class="con-3">
+				<a href="images/character concepts/3.png" style="background-image: url('images/character concepts/3.png');">
 					<ion-icon name="expand-outline"></ion-icon>
 				</a>
-				<a href="images/character concepts/4.png" class="con-4">
+				<a href="images/character concepts/4.png" style="background-image: url('images/character concepts/4.png');">
 					<ion-icon name="expand-outline"></ion-icon>
 				</a>
-				<a href="images/character concepts/5.png" class="con-5">
+				<a href="images/character concepts/5.png" style="background-image: url('images/character concepts/5.png');">
 					<ion-icon name="expand-outline"></ion-icon>
 				</a>
-				<a href="images/character concepts/6.jpg" class="con-6">
+				<a href="images/character concepts/6.jpg" style="background-image: url('images/character concepts/6.jpg');">
 					<ion-icon name="expand-outline"></ion-icon>
 				</a>
-				<a href="images/character concepts/7.png" class="con-7">
+				<a href="images/character concepts/7.png" style="background-image: url('images/character concepts/7.png');">
 					<ion-icon name="expand-outline"></ion-icon>
 				</a>
-				<a href="images/character concepts/8.png" class="con-8">
+				<a href="images/character concepts/8.png" style="background-image: url('images/character concepts/8.png');">
 					<ion-icon name="expand-outline"></ion-icon>
 				</a>
-				<a href="images/character concepts/9.png" class="con-9">
+				<a href="images/character concepts/9.png" style="background-image: url('images/character concepts/9.png');">
 					<ion-icon name="expand-outline"></ion-icon>
 				</a>
-				<a href="images/character concepts/10.png" class="con-10">
+				<a href="images/character concepts/10.png" style="background-image: url('images/character concepts/10.png');">
 					<ion-icon name="expand-outline"></ion-icon>
 				</a>
-				<a href="images/character concepts/11.png" class="con-11">
+				<a href="images/character concepts/11.png" style="background-image: url('images/character concepts/11.png');">
 					<ion-icon name="expand-outline"></ion-icon>
 				</a>
-				<a href="images/character concepts/12.png" class="con-12">
+				<a href="images/character concepts/12.png" style="background-image: url('images/character concepts/12.png');">
 					<ion-icon name="expand-outline"></ion-icon>
 				</a>
-				<a href="images/character concepts/13.png" class="con-13">
+				<a href="images/character concepts/13.png" style="background-image: url('images/character concepts/13.png');">
 					<ion-icon name="expand-outline"></ion-icon>
 				</a>
-				<a href="images/character concepts/14.png" class="con-14">
+				<a href="images/character concepts/14.png" style="background-image: url('images/character concepts/14.png');">
 					<ion-icon name="expand-outline"></ion-icon>
 				</a>
-				<a href="images/character concepts/15.png" class="con-15">
+				<a href="images/character concepts/15.png" style="background-image: url('images/character concepts/15.png');">
 					<ion-icon name="expand-outline"></ion-icon>
 				</a>
-				<a href="images/character concepts/16.png" class="con-16">
+				<a href="images/character concepts/16.png" style="background-image: url('images/character concepts/16.png');">
 					<ion-icon name="expand-outline"></ion-icon>
 				</a>
-				<a href="images/character concepts/17.png" class="con-17">
+				<a href="images/character concepts/17.png" style="background-image: url('images/character concepts/17.png');">
 					<ion-icon name="expand-outline"></ion-icon>
 				</a>
-				<a href="images/character concepts/18.png" class="con-18">
+				<a href="images/character concepts/18.png" style="background-image: url('images/character concepts/18.png');">
 					<ion-icon name="expand-outline"></ion-icon>
 				</a>
-				<a href="images/character concepts/19.png" class="con-19">
+				<a href="images/character concepts/19.png" style="background-image: url('images/character concepts/19.png');">
 					<ion-icon name="expand-outline"></ion-icon>
 				</a>
-				<a href="images/character concepts/20.png" class="con-20">
+				<a href="images/character concepts/20.png" style="background-image: url('images/character concepts/20.png');">
+					<ion-icon name="expand-outline"></ion-icon>
+				</a>
+				<a href="images/character concepts/21.png" style="background-image: url('images/character concepts/21.png');">
 					<ion-icon name="expand-outline"></ion-icon>
 				</a>
 			</div>
