--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 	<link href="https://fonts.googleapis.com/css2?family=Source+Code+Pro:ital,wght@0,200..900;1,200..900&display=swap"
 		rel="stylesheet">
 	<link rel="stylesheet" href="bsbox.css">
-	<link href='https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css' rel='stylesheet'>
+	<link href="https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css" rel="stylesheet">
 </head>
 
 <body>
@@ -28,7 +28,6 @@
 			<a href="index.html">Home</a>
 			<a href="works.html">Works</a>
 			<a href="aboutme.html">About Me</a>
-			<a href="contact.html">Contact</a>
 		</nav>
 	</header>
 	<main class="index-main">
@@ -44,10 +43,13 @@
 					<a href="mailto:braileysharpe@gmail.com"><ion-icon name="mail"></ion-icon></a>
 				</li>
 				<li>
-					<a href="https://www.instagram.com/b.artoonist/"><ion-icon name="logo-instagram"></ion-icon></a>
+					<a href="https://www.instagram.com/b.artoonist/" target="_blank"><ion-icon name="logo-instagram"></ion-icon></a>
 				</li>
 				<li>
-					<a href="https://www.facebook.com/brailey.chan/"><ion-icon name="logo-facebook"></ion-icon></a>
+					<a href="https://www.facebook.com/brailey.chan/" target="_blank"><ion-icon name="logo-facebook"></ion-icon></a>
+				</li>
+				<li>
+					<a href="https://github.com/BraileySharpe" target="_blank"><ion-icon name="logo-github"></ion-icon></a>
 				</li>
 			</ul>
 		</div>
