--- a/works.html
+++ b/works.html
@@ -12,7 +12,7 @@
 		rel="stylesheet">
 	<link rel="stylesheet" href="bsbox.css">
 	<link rel="stylesheet" href="bsboxworks.css">
-	<link href='https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css' rel='stylesheet'>
+	<link href="https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css" rel="stylesheet">
 </head>
 
 <body>
@@ -29,7 +29,6 @@
 			<a href="index.html">Home</a>
 			<a href="works.html">Works</a>
 			<a href="aboutme.html">About Me</a>
-			<a href="contact.html">Contact</a>
 		</nav>
 	</header>
 
